--- a/src/main/resources/templates/clients/all.html
+++ b/src/main/resources/templates/clients/all.html
@@ -7,6 +7,7 @@
     <h1>Клиенты</h1>
 
     <p>Клиенты</p>
+    <p th:text="${hello}" />
     <p><a class="btn btn-primary btn-large" th:href="@{/clients/new}">Новый клиент</a></p>
 
 
